Bug 130112 - Chart selection shows incorrect range highlight when zoom is not 100%
Summary: Chart selection shows incorrect range highlight when zoom is not 100%
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice Online
Classification: Unclassified
Component: Calc (show other bugs)
Version:
(earliest affected)
unspecified
Hardware: x86-64 (AMD64) Linux (All)
: medium normal
Assignee: Not Assigned
URL:
Whiteboard: target:6.5.0
Keywords:
Depends on:
Blocks:
 
Reported: 2020-01-21 17:12 UTC by Dennis Francis
Modified: 2020-01-22 08:48 UTC (History)
0 users

See Also:
Crash report or crash signature:


Attachments
Reproducer spreadsheet (11.42 KB, application/vnd.oasis.opendocument.spreadsheet)
2020-01-21 17:12 UTC, Dennis Francis
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Dennis Francis 2020-01-21 17:12:03 UTC
Created attachment 157309 [details]
Reproducer spreadsheet

Steps to reproduce :

1. Open the attachment using online-calc.
2. Change zoom to 150% (or something other than 100%).
3. Double click on the chart or select the chart and press enter-key.

What actually happens :

The range highlight is not exactly over A6:A9. The position/size of the highlight depends on the zoom level used.

Expected behavior :

The range highlight is exactly over A6:A9 which is the data range used to create the chart.

Version information :

core.git branch : distro/collabora/cp-6.2 
HEAD is 91d692aef10c57bfa3c64ca7ea3ab57601d08e25

online.git branch : master
HEAD is ca39976735106c1917749a6266622413d3462acc
Comment 1 Dennis Francis 2020-01-22 05:54:38 UTC
Patch for master @ https://gerrit.libreoffice.org/c/core/+/87170
Comment 2 Commit Notification 2020-01-22 08:43:02 UTC
Dennis Francis committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/be32a6390d0fc4ebf60d553b31e402ca9fbdec5d

tdf#130112 lok: Do not apply zoom-factor twice...

It will be available in 6.5.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.