tdf#130112 lok: Do not apply zoom-factor twice...

... in ScOutputData::FillReferenceMarks().
mnPPT[XY] already has the factor aZoom[XY] in it. Refer
ScViewData::CalcPPT() to see how PPT[XY] are derived.

Change-Id: I3f9b5c01cb53514450fad5f7b2b6861b112effdb
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/87158
Tested-by: Jenkins CollaboraOffice <jenkinscollaboraoffice@gmail.com>
Reviewed-by: Michael Meeks <michael.meeks@collabora.com>
(cherry picked from commit 3f62c10548466119ec6b1a662ab339e5dbe0b05f)
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/87170
Tested-by: Jenkins
Reviewed-by: Dennis Francis <dennis.francis@collabora.com>